2010-07-12  Dan Nicolaescu  <dann@ics.uci.edu>

	* buffer.c (Fset_buffer_multibyte): Remove subprocesses conditional.
	* process.c (close_process_descs): Use DOS_NT instead of WINDOWSNT.

	* emacs.c (__do_global_ctors, __do_global_ctors_aux)
	(__do_global_dtors, __main): Use void in definition.
	(main): Remove code dealing with SET_EMACS_PRIORITY, unused.
	Remove SYMS_MACHINE code, unused.  Remove SYMS_SYSTEM, inline
	the only users from ...
	* s/ms-w32.h (SYMS_SYSTEM): ... here and ...
	* s/msdos.h (SYMS_SYSTEM): ... here.  Remove.
	(HAVE_VOLATILE): Remove, unused.

	Convert more function definitions to standard C.
	* xdisp.c (window_box_edges, handle_single_display_spec)
	(display_string): Convert definition to standard C.
	* scroll.c (do_direct_scrolling, scrolling_1):
	* dispnew.c (allocate_matrices_for_frame_redisplay)
	(mirrored_line_dance):
	* coding.c (code_convert_string):
	* charset.c (map_charset_chars):
	* ccl.c (Fccl_program_p, Fccl_execute, Fccl_execute_on_string)
	(Fregister_ccl_program, Fregister_code_conversion_map):
	* keyboard.c (kbd_buffer_nr_stored): Likewise.
	(head_table): Make static and const.

2010-07-12  Andreas Schwab  <schwab@linux-m68k.org>

	* Makefile.in (C_WARNINGS_SWITCH, PROFILING_CFLAGS)
	(PROFILING_LDFLAGS): Set from substitution.
	(ALL_CFLAGS): Add C_WARNINGS_SWITCH and PROFILING_CFLAGS, put
	CFLAGS last.

2010-07-12  Kenichi Handa  <handa@m17n.org>

	* Makefile.in (lisp): Change hebrew.el to hebrew.elc.
	(shortlisp): Likewise.

	* font.h (enum font_property_index): New member FONT_ENTITY_INDEX.

	* font.c (font_open_entity): Record ENTITY in FONT_OBJECT's slot
	of FONT_ENTITY_INDEX.
	(Ffont_get): If KEY is :otf and the font-object doesn't have the
	property, get the property value dynamically.
	(Ffont_put): Accept font-entity and font-object too.
	(Ffont_get_glyhphs): Renamed from Fget_font_glyphs.  Arguments and
	return value changed.
	(syms_of_font): Adjusted for the above change.
